Finish sketch of a table

--- a/style.css
+++ b/style.css
@@ -46,6 +46,11 @@
   font-family: "Source Sans Pro";
   font-size: 18px;
 
+  border-collapse: collapse;
   table-layout: fixed;
   text-align: center;
+}
+
+#links, .link {
+  border: 10px solid #FFFFFF;
 }
