--- a/style.css
+++ b/style.css
@@ -60,6 +60,7 @@
   flex-direction: column;
   position: absolute;
   top: 34px;
+  white-space: nowrap;
   z-index: 1;
 
   background-color: #F9F9F9;
@@ -68,7 +69,7 @@
 
 .dropdown-content a {
   color: #111111;
-  font-size: 16px;
+  font-size: 14px;
   padding: 3px 8px;
 }
 
